--- a/mcndfs/nbproject/project.properties
+++ b/mcndfs/nbproject/project.properties
@@ -26,12 +26,16 @@ dist.jar=${dist.dir}/mcndfs.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.graph.jar=/home/kinterror/Documents/Concurrency/ndfs/lib/graph.jar
+file.reference.graph.jar-1=/Users/00melo00/Desktop/school 2012 - 2013/concurrency and multithreading/ndfs/lib/graph.jar
 file.reference.spinja.jar=/home/kinterror/Documents/Concurrency/ndfs/lib/spinja.jar
+file.reference.spinja.jar-1=/Users/00melo00/Desktop/school 2012 - 2013/concurrency and multithreading/ndfs/lib/spinja.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.graph.jar}:\
-    ${file.reference.spinja.jar}
+    ${file.reference.spinja.jar}:\
+    ${file.reference.graph.jar-1}:\
+    ${file.reference.spinja.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
